눈에 보이는 오류는 수정