@@ -26,11 +26,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-/**
- * 태스크 도메인 서비스 구현.
- * - 레포에 페이징 메서드가 부족한 경우 서비스에서 임시 페이징(PageImpl) 처리
- * - 성능 이슈가 생기면 레포에 findByProjectId(..., Pageable) 메서드를 추가하여 교체
- */
 @Service
 @Transactional
 @RequiredArgsConstructor
@@ -44,7 +39,6 @@ public class TaskServiceImpl implements TaskService {
     private final FileObjectRepository fileObjectRepository;
     private final ApplicationEventPublisher publisher;
 
-    /* ID로 태스크 조회. 없으면 NotFoundException. */
     @Override
     @Transactional(readOnly = true)
     public Task get(Long id) {
@@ -52,7 +46,6 @@ public class TaskServiceImpl implements TaskService {
                 .orElseThrow(() -> new NotFoundException("Task not found: " + id));
     }
 
-    /* 특정 프로젝트의 태스크 목록(페이징). */
     @Override
     @Transactional(readOnly = true)
     public Page<Task> listByProject(Long projectId, Pageable pageable) {
@@ -63,14 +56,12 @@ public class TaskServiceImpl implements TaskService {
         return new PageImpl<>(content, pageable, all.size());
     }
 
-    /* 개인 태스크 */
     @Override
     @Transactional(readOnly = true)
     public Page<Task> listPersonalTasks(Long userId, Pageable pageable) {
         return taskRepository.findByProjectIdIsNullAndAssigneeId(userId, pageable);
     }
 
-    /* 완료된 태스크 (워크플로우의 마지막 단계) */
     @Override
     @Transactional(readOnly = true)
     public Page<Task> listCompletedTasksByProject(Long projectId, Pageable pageable) {
@@ -78,37 +69,34 @@ public class TaskServiceImpl implements TaskService {
                 .findByProjectIdAndIsTerminalTrue(projectId)
                 .stream()
                 .map(Workflow::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         if (terminalWorkflowIds.isEmpty()) {
             return new PageImpl<>(List.of(), pageable, 0);
         }
 
-        return taskRepository.findByProjectIdAndWorkflowsIdIn(projectId, terminalWorkflowIds, pageable);
+        // ★ 메서드명 수정
+        return taskRepository.findByProjectIdAndWorkflow_IdIn(projectId, terminalWorkflowIds, pageable);
     }
 
-    /* 프로젝트별 직원별 담당 태스크 */
     @Override
     public Map<Long, List<Task>> listTasksByAssignee(Long projectId) {
         List<Task> tasks = taskRepository.findByProjectId(projectId);
-
         return tasks.stream()
                 .filter(t -> t.getAssignee() != null)
                 .collect(Collectors.groupingBy(t -> t.getAssignee().getId()));
     }
 
-    /* 프로젝트 태스크 간트차트 데이터 */
     @Override
     @Transactional(readOnly = true)
     public List<GanttTaskDTO> getProjectTasksForGantt(Long projectId) {
         List<Task> tasks = taskRepository.findByProjectId(projectId);
-
         return tasks.stream()
                 .map(t -> new GanttTaskDTO(
                         t.getId(),
                         t.getTitle(),
                         (t.getAssignee() != null ? t.getAssignee().getName() : null),
-                        (t.getAssignee() != null ? t.getAssignee().getAvatarUrl() : null), // ✅ User 통해 avatarUrl 가져오기
+                        (t.getAssignee() != null ? t.getAssignee().getAvatarUrl() : null),
                         t.getStartDate(),
                         t.getDueDate(),
                         t.getProgressPct(),
@@ -117,17 +105,22 @@ public class TaskServiceImpl implements TaskService {
                 .toList();
     }
 
-        /* 태스크 워크플로 단계 변경 */
+    /** 워크플로 단계 변경 */
     @Transactional
     public Task changeWorkflow(Long taskId, String toStage, Long actorUserId) {
         Task task = taskRepository.findById(taskId)
                 .orElseThrow(() -> new IllegalArgumentException("Task not found: " + taskId));
 
-        String fromStage = task.getWorkflow().getName();
-        task.getWorkflow().setName(toStage);
+        String fromStage = task.getWorkflow() != null ? task.getWorkflow().getName() : null;
+
+        // ★ 이름으로 단계 찾기 → 엔티티 교체
+        Workflow toWorkflow = workflowRepository
+                .findByProjectIdAndName(task.getProject().getId(), toStage)
+                .orElseThrow(() -> new IllegalArgumentException("Workflow not found in project: " + toStage));
+
+        task.setWorkflow(toWorkflow);
         taskRepository.save(task);
 
-        // 📢 이벤트 발행 (워크플로 변경 알림)
         publisher.publishEvent(new TaskWorkflowChangedEvent(
                 task.getProject().getId(),
                 task.getId(),
@@ -136,35 +129,27 @@ public class TaskServiceImpl implements TaskService {
                 actorUserId,
                 task.getTitle()
         ));
-
         return task;
     }
 
-    /* 최소 정보로 태스크 생성 */
     @Override
     public Task create(Long projectId, Long assigneeId, String title, Long workflowId, Integer priorityId) {
         Task t = new Task();
         t.setTitle(title);
 
-        // 프로젝트
         t.setProject(new com.azure.model.project.Project());
         t.getProject().setId(projectId);
 
-        // 담당자
         if (assigneeId != null) {
             User assignee = userRepository.findById(assigneeId)
                     .orElseThrow(() -> new NotFoundException("User not found: " + assigneeId));
             t.setAssignee(assignee);
         }
-
-        // 워크플로우
         if (workflowId != null) {
             Workflow w = workflowRepository.findById(workflowId)
                     .orElseThrow(() -> new NotFoundException("Workflow not found: " + workflowId));
             t.setWorkflow(w);
         }
-
-        // 우선순위
         if (priorityId != null) {
             Priority pr = priorityRepository.findById(priorityId)
                     .orElseThrow(() -> new NotFoundException("Priority not found: " + priorityId));
@@ -173,7 +158,6 @@ public class TaskServiceImpl implements TaskService {
         return taskRepository.save(t);
     }
 
-    /* 개인 태스크 생성 */
     @Override
     public Task createPersonalTask(Long userId, String title, Integer priorityId) {
         Task t = new Task();
@@ -194,7 +178,6 @@ public class TaskServiceImpl implements TaskService {
         return taskRepository.save(t);
     }
 
-    /* 하위 태스크 생성 */
     @Override
     public Task createSubTask(Long parentTaskId, Long assigneeId, String title, Long workflowId, Integer priorityId) {
         Task parent = get(parentTaskId);
@@ -208,7 +191,6 @@ public class TaskServiceImpl implements TaskService {
                     .orElseThrow(() -> new NotFoundException("User not found: " + assigneeId));
             subTask.setAssignee(assignee);
         }
-
         if (workflowId != null) {
             Workflow w = workflowRepository.findById(workflowId)
                     .orElseThrow(() -> new NotFoundException("Workflow not found: " + workflowId));
@@ -217,7 +199,6 @@ public class TaskServiceImpl implements TaskService {
             }
             subTask.setWorkflow(w);
         }
-
         if (priorityId != null) {
             Priority pr = priorityRepository.findById(priorityId)
                     .orElseThrow(() -> new NotFoundException("Priority not found: " + priorityId));
@@ -226,7 +207,6 @@ public class TaskServiceImpl implements TaskService {
         return taskRepository.save(subTask);
     }
 
-    /* 담당자 지정/해제 */
     @Override
     public Task assign(Long taskId, Long assigneeId) {
         Task t = get(taskId);
@@ -236,7 +216,6 @@ public class TaskServiceImpl implements TaskService {
         return taskRepository.save(t);
     }
 
-    /* 워크플로우 설정 */
     @Override
     public Task setWorkflow(Long taskId, Long workflowId) {
         Task task = get(taskId);
@@ -246,12 +225,10 @@ public class TaskServiceImpl implements TaskService {
         if (!workflow.getProject().getId().equals(task.getProject().getId())) {
             throw new IllegalArgumentException("Workflow does not belong to the same project as the task");
         }
-
         task.setWorkflow(workflow);
         return taskRepository.save(task);
     }
 
-    /* 계획 시작일/마감일 설정 */
     @Override
     public Task setDates(Long taskId, LocalDate startDate, LocalDate dueDate) {
         Task t = get(taskId);
@@ -260,7 +237,6 @@ public class TaskServiceImpl implements TaskService {
         return taskRepository.save(t);
     }
 
-    /* 진행률 업데이트 */
     @Override
     public Task setProgress(Long taskId, BigDecimal progressPct) {
         Task task = get(taskId);
@@ -278,23 +254,19 @@ public class TaskServiceImpl implements TaskService {
         return saved;
     }
 
-    /** 상위 태스크 진행률을 하위 태스크들의 평균으로 갱신 */
     private void updateParentProgress(Long parentTaskId) {
         Task parent = get(parentTaskId);
         List<Task> subTasks = taskRepository.findByParentTaskId(parentTaskId);
-
         if (subTasks.isEmpty()) return;
 
         BigDecimal total = BigDecimal.ZERO;
         int count = 0;
-
         for (Task sub : subTasks) {
             if (sub.getProgressPct() != null) {
                 total = total.add(sub.getProgressPct());
                 count++;
             }
         }
-
         BigDecimal avg = (count > 0)
                 ? total.divide(BigDecimal.valueOf(count), 2, RoundingMode.HALF_UP)
                 : BigDecimal.ZERO;
@@ -307,13 +279,11 @@ public class TaskServiceImpl implements TaskService {
         }
     }
 
-    /* 태스크 삭제 */
     @Override
     public void delete(Long taskId) {
         taskRepository.deleteById(taskId);
     }
 
-    /* 첨부파일 추가 */
     @Override
     public void addAttachment(Long taskId, Long fileId) {
         Task task = get(taskId);
@@ -330,7 +300,6 @@ public class TaskServiceImpl implements TaskService {
         taskAttachmentRepository.save(att);
     }
 
-    /* 첨부파일 제거 */
     @Override
     public void removeAttachment(Long taskId, Long fileId) {
         TaskAttachmentId id = new TaskAttachmentId();
@@ -338,17 +307,16 @@ public class TaskServiceImpl implements TaskService {
         id.setFileId(fileId);
         taskAttachmentRepository.deleteById(id);
     }
-    // 특정 담당자의 모든 태스크 목록(페이징)
+
     @Override
     @Transactional(readOnly = true)
     public Page<Task> listByAssignee(Long assigneeId, Pageable pageable) {
         return taskRepository.findByAssigneeId(assigneeId, pageable);
     }
-    // 특정 프로젝트 + 워크플로우에 속한 태스크 수
+
     @Override
     @Transactional(readOnly = true)
     public long countByProjectAndWorkflow(Long projectId, Long workflowId) {
         return taskRepository.countByProjectIdAndWorkflow_Id(projectId, workflowId);
     }
-
 }
